# literaltypes

./: .clang-format  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  first.cpp
include/: CMakeLists.txt
include/literaltypes/: ConstString.hpp  Types.hpp  Values.hpp
